<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <EditText
        android:id="@+id/credit"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:inputType="numberDecimal"
        android:background="@drawable/round_grey"
        android:layout_weight="1"
        android:hint="@string/credit"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="40dp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_grey">

        <EditText
            android:id="@+id/sgpa"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="numberDecimal"
            android:background="@drawable/round_grey"
            android:layout_weight="1"
            android:hint="@string/sgpa"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="40dp" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/remove"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_close"
        android:background="@drawable/tab_bg"
        android:backgroundTint="#DF002D"
        android:contentDescription="@string/clear" />

</LinearLayout>