<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CgpaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:gravity="center_horizontal"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/credit"
               android:textSize="20sp"
               android:textAlignment="center"
               android:paddingLeft="20dp"
               android:paddingRight="20dp"
               android:background="@drawable/round_grey"
               android:layout_gravity="center"
               android:gravity="center_horizontal"
               android:layout_margin="15dp" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="@string/grade"
               android:textAlignment="center"
               android:paddingLeft="20dp"
               android:paddingRight="20dp"
               android:background="@drawable/round_grey"
               android:layout_gravity="center"
               android:textSize="20sp"
               android:layout_margin="15dp" />
       </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/button_add"
                android:background="@drawable/tab_bg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/add_course"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:textColor="#CACACA"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableEnd="@drawable/ic_clear"
                />
            <Button
                android:id="@+id/button_reset"
                android:background="@drawable/tab_bg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/reset"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:textColor="#CACACA"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableEnd="@drawable/ic_reset"
                />
        </LinearLayout>

        <Button
            android:id="@+id/calculate_cgpa"
            android:background="@drawable/tab_bg"
            android:backgroundTint="#292929"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/calculate"
            android:textColor="#d9d9d9"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAllCaps="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
           />

    </LinearLayout>

</ScrollView>